# Veesnoo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  addheader.sh  docs.do  license-header.txt
curses-tests/: .gitignore  default.do  getcharcode  getcharcode.c  inituninit_onusrlocal  inituninit_onusrlocal.c  inituninit_onusrlocal.d  setcursmodes.c  testmultterm.c  testwmove.c  umlauts.c
curses-tests/ncurses-howto/: acschars.c  borders.c  chgat.c  colors.c  dumping.dump  mouses.c  pager.c
doc/: TODO.md  TODO.txt  classes.gv  create-shared-library.md  curses-notes.md  layout-strategy.md  nvwm.vue  possible-names.txt  possible-network-proto.txt  possible-reallife-apps.md  redo-notes.txt  todo-notes.txt
src/: .gitignore  BasicEvent.cc  BasicEvent.h  Button.cc  Button.h  CMakeLists.txt  ChangeEvent.cc  ChangeEvent.h  CheckBox.cc  CheckBox.h  Checkbox.cc  Checkbox.h  ColorAttribute.cc  ColorAttribute.h  ColorSet.cc  ColorSet.h  ColorTheme.cc  ColorTheme.h  ConfirmBox.cc  ConfirmBox.h  Container.cc  Container.h  ContainerFocusManager.cc  ContainerFocusManager.h  ContainerFocusManaging.cc  ContainerFocusManaging.h  CursesException.cc  CursesException.h  CursesManager.cc  CursesManager.h  CursesWindow.cc  CursesWindow.h  Event.cc  Event.h  FocusManaging.cc  FocusManaging.h  FocusStealer.cc  FocusStealer.h  FocusStealing.h  Focusable.h  (+168 more)
src-c++/: .gitignore  Button.cc  Button.h  Checkbox.h  Container.cc  Container.h  ContainerFocusManager.cc  ContainerFocusManager.h  ContainerFocusManaging.h  CursesException.cc  CursesException.h  CursesManager.cc  CursesManager.h  CursesWindow.cc  CursesWindow.h  FocusManaging.cc  FocusManaging.h  Focusable.h  FocusableContainer.cc  FocusableContainer.h  FocusableWidget.cc  FocusableWidget.h  HorizontalMenu.cc  HorizontalMenu.h  KeyReceiving.h  Label.h  Makefile  Rect.cc  Rect.h  SingleFocusManager.cc  SingleFocusManager.h  TODO  VerticalMenu.h  Widget.cc  Widget.h  config.sh  default.o.do  libnvwm.a.do
src-c++/test/: .gitignore  Makefile  clean.do  config.sh  default.do  testButton.cc  testCheckbox.cc  testHorizontalMenu.cc  testLabel.cc  testVerticalMenu.cc
src/MainWindow/: MainWindow.cc  MainWindow.h  MainWindowFocusManager.cc  MainWindowFocusManager.h
src/test/: .gitignore  Makefile  all.do  clean.do  config.sh  default.do  default.o.do  redo-config.sh  testApp.cc  testApp.m  testButton.cc  testChangeEvent.cc  testCheckBox.cc  testCheckbox.cc  testColorAttribute.cc  testConfirmBox.cc  testContainer.cc  testFocus.m  testHorizVertMenus  testHorizVertMenus.m  testHorizontalMenu.cc  testHorizontalMenu_hardcoded.cc  testLabel.cc  testLabelInScreen.cc  testMainWindow.cc  testMemleak.cc  testMessageBox.cc  testNVCursesWindow.m  testNVRect.m  testOneWidget.cc  testPopupMenu  testPopupMenu.cc  testPopupMenu.m  testRadioButton.cc  testRadioGroup.cc  testScreen.cc  testScrollPane.cc  testSelectBox.cc  testSelectbox  testSelectbox.m  (+10 more)
src/test/functional/: Makefile  rects  rects.m
test/: 0100_nvCursesManager.c  0200_nvCursesWindow.c  0300_nvColorManager.c  0350_nvLabel.c  0360_nvTextbox.c  0370_nvCheckbox.c  0380_nvActionLabel.c  0400_nvFocusManager.c  0410_nvSubwidgetManager.c  0500_nvWindow.c  0600_nvHorizontalMenu.c  0610_nvVerticalMenu.c  0620_nvPopupMenu.c  0700_nvButton.c  0750_nvSelectbox.c  CMakeLists.txt  debug.c  debug.h
test-refs/: Makefile  Manager.cc  Manager.h  Widget.cc  Widget.h  app  main.cc
